# mtec345-homework

./: .gitignore  README.md
charles-holbrow/: README.md
david-wauters/final/midi-humanizer/midi-huminizer-python/: .gitignore  main.py  pyproject.toml
ethan-bessette/midterm/: 0000.csd  README.md  create_dataset.py  decode.csd  encode.csd  main.py  pyproject.toml  synth.py  train.py
ethan-bessette/midterm/Dataset/: 0004.txt  0007.txt  0016.txt  0017.txt  0022.txt  0023.txt  0025.txt  0026.txt  0028.txt  0029.txt  0030.txt  0032.txt  0036.txt  0039.txt  0040.txt  0041.txt  0042.txt  0043.txt  0044.txt  0045.txt  0056.txt  0057.txt  0058.txt  0061.txt  0066.txt  0067.txt  0068.txt  0071.txt  0074.txt  0075.txt  0077.txt  0078.txt  0081.txt  0089.txt  0090.txt  0091.txt  0094.txt  0095.txt  0105.txt  0107.txt  (+47 more)
ethan-bessette/midterm/Dataset/processed/: metadata.csv
ethan-bessette/midterm/Resources/: scream.maxpat  template copy 2.csd  template copy.csd  template.csd
ethan-bessette/midterm/Resources/AI Chats/: chat-3077e93f-75f5-47fc-a8de-f1b2ceaea91a.txt  chat-adb8c603-6f59-4e8b-aba3-869a97367c14.txt  chat-e8e95905-55de-43b7-9557-afd23c0b3a2a.txt
ethan-bessette/midterm/Resources/Dataset/: 0001.txt  0002.txt  0005.txt  0009.txt  0010.txt  0018.txt  0019.txt  0020.txt  0021.txt  0024.txt  0027.txt  0031.txt  0033.txt  0034.txt  0035.txt  0037.txt  0038.txt  0046.txt  0047.txt  0048.txt  0049.txt  0050.txt  0051.txt  0052.txt  0053.txt  0054.txt  0055.txt  0059.txt  0060.txt  0062.txt  0063.txt  0064.txt  0065.txt  0069.txt  0070.txt  0072.txt  0073.txt  0076.txt  0079.txt  0080.txt  (+65 more)
(+337 files in other folders)
