[project]
name = "midterm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "scipy>=1.17.1",
    "scipy-stubs~=1.17.1",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "torch==2.8",
]
