[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "midi-humanizer"
version = "0.1.0"
description = "Train a PyTorch model that humanizes rigid MIDI clips using MAESTRO."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=1.26",
  "pretty-midi>=0.2.10",
  "torch>=2.2",
  "tqdm>=4.66",
]

[project.scripts]
midi-humanizer = "midi_humanizer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/midi_humanizer"]
