[project]
name = "midi-morph"
version = "0.1.0"
description = "Transform chord MIDI into melodies and melody MIDI into chord accompaniments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "miditok>=3.0.0",
    "miditoolkit>=1.0.1",
    "numpy>=1.24",
    "torch>=2.1",
    "typer>=0.12",
]

[project.scripts]
midi-morph = "midi_morph.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
